Complete iteration one

--- a/mails/Reset-Password.ejs
+++ b/mails/Reset-Password.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Powelelss ActivationEmail</title>
+    <title>Ecommerce Update Password</title>
     <style type="text/css">
       /*Base formatting*/
       body {
@@ -69,10 +69,10 @@
   <body>
     <div class="email-wrapper">
       <div class="email-header">
-        <h1>Powelelss Password Update Confirmation</h1>
+        <h1>Ecommerce Password Update Confirmation</h1>
       </div>
       <div class="email-body">
-        <p>A request has been made to update your password for Powelelss</p>
+        <p>A request has been made to update your password for Ecommerce</p>
         <p>Click the link below to update your password</p>
         <a href="<%= link %>"><%= link %></a>
         <p>
@@ -84,9 +84,9 @@
         <div class="email-footer">
           <p>
             In case of any questions, please write to using
-            <a href="mailto:powelelss@outlook.com">powelelss@outlook.com</a>
+            <a href="mailto:ecommerce@gmail.com">ecommerce@gmail.com</a>
           </p>
-          <p>&copy; 2024 Powelelss. All rights reserved.</p>
+          <p>&copy; 2024 Ecommerce. All rights reserved.</p>
         </div>
       </div>
     </div>
