--- a/mails/Activation-confirmation.ejs
+++ b/mails/Activation-confirmation.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Powelelss ActivationEmail</title>
+    <title>Ecommerce ActivationEmail</title>
     <style type="text/css">
       /*Base formatting*/
       body {
@@ -69,7 +69,7 @@
   <body>
     <div class="email-wrapper">
       <div class="email-header">
-        <h1>Powelelss Activation Confirmation</h1>
+        <h1>Ecommerce Activation Confirmation</h1>
       </div>
       <div class="email-body">
         <p>Hello <%= user.username %>,</p>
@@ -79,7 +79,7 @@
         </p>
         <p>
           Your account has been successfully verified. You can now have access
-          to the best services offered by Powelelss to unleash your full
+          to the best services offered by Ecommerce to unleash your full
           potential during your studies.
         </p>
         <p>
@@ -88,9 +88,9 @@
         <div class="email-footer">
           <p>
             In case of any questions, please write to using
-            <a href="mailto:powelelss@outlook.com">powelelss@outlook.com</a>
+            <a href="mailto:ecommerce@gmail.com">ecommerce@gmail.com</a>
           </p>
-          <p>&copy; 2024 Powelelss. All rights reserved.</p>
+          <p>&copy; 2024 Ecommerce. All rights reserved.</p>
         </div>
       </div>
     </div>
